# gooddelo_test

./: .example.env  README.md  main.py  pyproject.toml
app/: db.py  routes.py  settings.py
auth/: api.py  exceptions.py  models.py  schemas.py  services.py  utils.py
